maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:77: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    setDirection.EAST
    ^