maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
  def aMurEst(x:Int,y:Int):Boolean ={
    if(x==getMondeLargeur-1){return true}
    else{
      if(aMurOuest(x+1,y)){return true}
      else{return false}
    }
  }
  def aMurSud(x:Int,y:Int):Boolean ={
    if(y==getMondeHauteur-1){return true}
    else{
      if(aMurNord(x,y+1)){return true}
      else{return false}
    }
  }
  
  var posX=0
  var posY=0
  
  for(x<- 0 to getMondeLargeur()-1){
    for(y<- 0 to getMondeHauteur()-1){
  	   if (aBiscuit(x,y)) {
         posX = x;
         posY = y;
       }      
    }
  }
  
  setIndication(posX,posY,0)

  var chiffre =0
  var fin = false
  while(!fin){
    var somme = 0
    for(x<- 0 to getMondeLargeur()-1){
      for(y<- 0 to getMondeHauteur()-1){
        if(getIndication(x,y)==chiffre){
          if(!aMurNord(x,y) && getIndication(x,y-1)==9999){
            setIndication(x,y-1,chiffre+1)
            somme+=1
          }
          if(!aMurSud(x,y) && getIndication(x,y+1)==9999){
            setIndication(x,y+1,chiffre+1)
            somme+=1
          }
          if(!aMurEst(x,y) && getIndication(x+1,y)==9999){
            setIndication(x+1,y,chiffre+1)
            somme+=1
          }
          if(!aMurOuest(x,y) && getIndication(x-1,y)==9999){
            setIndication(x-1,y,chiffre+1)
            somme+=1
          }
        }
      }
    }
    if(somme==0){fin = true }
    chiffre+=1
  }
  while(getX()!=posX && getY()!=posY){
    var num = getIndication(getX(),getY())
    var dir= 1
    if(!aMurEst(posX,posY)){
      if(getIndication(posX+1,posY)<num){num=getIndication(posX+1,posY)}
    }
    if(!aMurNord(posX,posY)){
      if(getIndication(posX,posY-1)<num){num=getIndication(posX,posY-1);dir=2}
    }
     if(!aMurOuest(posX,posY)){
       if(getIndication(posX,posY)<num){num=getIndication(posX-1,posY);dir=3}
    }
    if(!aMurSud(posX,posY)){
      if(getIndication(posX,posY+1)<num){num=getIndication(posX,posY+1);dir=4}
    }
    setDirection.EAST
    for(i<-1 to dir){gauche()}
    avance()
  }
  prendBiscuit()
}